# realtime

./: Cargo.toml
frontend/: .prettierrc  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
frontend/src/: app.html  app.postcss
frontend/src/lib/: socket.ts
frontend/src/routes/: +layout.svelte  +page.svelte
src/: main.rs
